Fix padding overflow and change user badge to fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ html, body {
   flex-direction: column;
   padding-top: 48px;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 48px);
   font-family: "futura-pt", sans-serif;
 }
 
